--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Rachel Tong # your name (or website title) here
-logo: "images/Updated Headshot.jpeg" # your photo (or logo) here
+logo: "images/Headshot Circle.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hello! My Name is Rachel and Welcome to my Data Science Portfolio.  
   <br><br>
   I am passionate about helping organizations unleash the power of data to make better decisions. 
-  <br>
-  I am currently a strategy and analytics consultant on a journey to deepen my data science skillset, learn new tools and techniques, and solve interesting problems, one dataset at a time.  
+  <br><br>
+  I am currently a strategy and analytics consultant at Mastercard with 2+ years experience on a journey to deepen my data science skillset, learn new tools and techniques, and solve interesting problems, one dataset at a time.  
   <br><br>
   <a href="https://www.linkedin.com/in/rachelwtong/">View My LinkedIn Profile</a> 
   <br><br> 
