--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   I am passionate about helping organizations unleash the power of data to make better decisions. 
   <br><br>
-  I am currently a strategy and analytics consultant at Mastercard with 2+ years experience on a journey to deepen my data science skillset, learn new tools and techniques, and solve interesting problems, one dataset at a time.  
+  I am currently a strategy and analytics consultant at Mastercard with 2+ years of experience on a journey to deepen my data science skillset, learn new tools and techniques, and solve interesting problems, one dataset at a time.  
   <br><br>
   <a href="https://www.linkedin.com/in/rachelwtong/">View My LinkedIn Profile</a> 
   <br><br> 
-  <a href="rachelwtong@gmail.com">Contact Me!</a>
+  <a href="mailto:rachelwtong@gmail.com">Contact Me!</a>
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
