--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   I am currently a strategy and analytics consultant at Mastercard with 2+ years of experience on a journey to deepen my data science skillset, learn new tools and techniques, and solve interesting problems, one dataset at a time.  
   <br><br>
   <a href="https://www.linkedin.com/in/rachelwtong/">View My LinkedIn Profile</a> 
+  <br><br>
+  <a href="pdf/Resume - Rachel Tong.pdf">Resume</a> 
   <br><br> 
   <a href="mailto:rachelwtong@gmail.com">Contact Me!</a>
   
