--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Rachel Tong # your name (or website title) here
 logo: "images/Headshot Circle.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Hello! My Name is Rachel and Welcome to my Data Science Portfolio.  
+  <br>
+  Hello! My name is Rachel - welcome to my data science portfolio! 
   <br><br>
   I am passionate about helping organizations unleash the power of data to make better decisions. 
   <br><br>
